# ChangeLog for www-client/firefox
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/firefox/ChangeLog,v 1.356 2014/09/05 17:34:52 jer Exp $

  05 Sep 2014; Jeroen Roovers <jer@gentoo.org> firefox-24.8.0.ebuild:
  Stable for HPPA (bug #522020).

  05 Sep 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> firefox-31.1.0.ebuild,
  firefox-32.0.ebuild:
  fixed minimum versions on some deps, fix is in-place, revbumps will be coming
  after other bugs are sorted

  05 Sep 2014; Agostino Sarubbo <ago@gentoo.org> firefox-24.8.0.ebuild:
  Stable for x86, wrt bug #522020

  05 Sep 2014; Agostino Sarubbo <ago@gentoo.org> firefox-24.8.0.ebuild:
  Stable for amd64, wrt bug #522020

*firefox-32.0 (03 Sep 2014)
*firefox-24.8.0 (03 Sep 2014)
*firefox-31.1.0 (03 Sep 2014)

  03 Sep 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> +firefox-24.8.0.ebuild,
  +firefox-31.1.0.ebuild, +firefox-32.0.ebuild, -firefox-24.5.0.ebuild,
  -firefox-24.6.0.ebuild, -firefox-29.0.1.ebuild, -firefox-31.0.ebuild:
  version bump, cheanup of some old ebuilds

  10 Aug 2014; Agostino Sarubbo <ago@gentoo.org> firefox-24.7.0.ebuild:
  Stable for ppc64, wrt bug #517876

  09 Aug 2014; Agostino Sarubbo <ago@gentoo.org> firefox-24.7.0.ebuild:
  Stable for ppc, wrt bug #517876

  08 Aug 2014; Jeroen Roovers <jer@gentoo.org> firefox-24.7.0.ebuild:
  Stable for HPPA (bug #517876).

  04 Aug 2014; Agostino Sarubbo <ago@gentoo.org> firefox-24.7.0.ebuild:
  Stable for x86, wrt bug #517876

  01 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> firefox-24.7.0.ebuild:
  amd64 stable wrt bug #517876

  01 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> -firefox-30.0.ebuild,
  firefox-31.0.ebuild:
  remove old; made firefox-31 compatible with fixed IUSE=wifi implementation in
  mozconfig-v4.eclass

  01 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> firefox-31.0.ebuild:
  made compatible with fixed IUSE=wifi implementation in mozconfig-v4.eclass
