@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>mozilla</herd>
+<maintainer>
+	<email>poncho@spahan.ch</email>
+	<name>Poncho</name>
+</maintainer>
 <use>
 	<flag name="bindist">Disable official Firefox branding (icons, name) which 
 		are not binary-redistributable according to upstream.</flag>
 	<flag name="custom-optimization">Fine-tune custom compiler
 		optimizations (-Os, -O0, -O1, -O2, -O3)</flag>
-	<flag name="ipc">Use inter-process communication between tabs and plugins.
-		Allows for greater stability in case of plugin crashes</flag>
 	<flag name="minimal"> Prevent sdk and headers from being installed</flag>
 	<flag name="pgo">Add support for profile-guided optimization using gcc-4.5,
 		for faster binaries. This option will double the compile time.</flag>
@@ -20,7 +21,5 @@
 		Use system jpeg instead of bundled.</flag>
 	<flag name="system-sqlite">Use the system-wide <pkg>dev-db/sqlite</pkg>
 		installation with secure-delete enabled</flag>
-	<flag name="webm">Use system <pkg>media-libs/libvpx</pkg> for HTML5 WebM
-		video support.</flag>
 </use>
 </pkgmetadata>
